--- a/react/21-redux-app/src/index.css
+++ b/react/21-redux-app/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.link
+{
+  color: black;
+  font-size: 12px;
+  text-decoration: none;
+  font-weight:500;
+}
